mux-compiler/tests/snapshots/lexer_integration__file_lexer__test_module_constants.snap
---
source: mux-compiler/tests/lexer_integration.rs
expression: tokens
---
[
    Token {
        token_type: LineComment(
            "Cross-module constant access: reading a `const` defined in an imported",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: LineComment(
            "module through the module namespace (constmath.PI). A same-named local must",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: LineComment(
            "not shadow the module constant. Covers float, int, and string constants,",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: LineComment(
            "and a module constant used inside a larger expression.",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Import,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "constmath",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Func,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "main",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: Returns,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "void",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Auto,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "local_pi",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Eq,
        span: Span { .. },
    },
    Token {
        token_type: Float(
            999.0,
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Str(
            "local pi: ",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Plus,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "local_pi",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Str(
            "module pi: ",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Plus,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "constmath",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "PI",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Str(
            "max sides: ",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Plus,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "constmath",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "MAX_SIDES",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Str(
            "unit: ",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Plus,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "constmath",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "UNIT",
        ),
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Auto,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "circumference",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Eq,
        span: Span { .. },
    },
    Token {
        token_type: Float(
            2.0,
        ),
        span: Span { .. },
    },
    Token {
        token_type: Star,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "constmath",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "PI",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Star,
        span: Span { .. },
    },
    Token {
        token_type: Float(
            10.0,
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Str(
            "circumference: ",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Plus,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "circumference",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Str(
            "area via module func: ",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Plus,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "constmath",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "circle_area",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Float(
            2.0,
        ),
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Return,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
]
