mux-compiler/tests/snapshots/lexer_integration__file_lexer__test_module_global_scoping.snap
---
source: mux-compiler/tests/lexer_integration.rs
expression: tokens
---
[
    Token {
        token_type: LineComment(
            "Two imported modules declaring the same-named globals must not share a slot,",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: LineComment(
            "whether read from inside the owning module or through its namespace.",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Import,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "modglobal_a",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Import,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "modglobal_b",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Func,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "main",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: Returns,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "void",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: LineComment(
            "read from inside each owning module",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Str(
            "a_shared: ",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Plus,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "modglobal_a",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "a_shared",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Str(
            "b_shared: ",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Plus,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "modglobal_b",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "b_shared",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Str(
            "a_label:  ",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Plus,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "modglobal_a",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "a_label",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Str(
            "b_label:  ",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Plus,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "modglobal_b",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "b_label",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: LineComment(
            "read through each module namespace",
        ),
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Str(
            "a.SHARED: ",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Plus,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "modglobal_a",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "SHARED",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Str(
            "b.SHARED: ",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Plus,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "modglobal_b",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "SHARED",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Str(
            "a.LABEL:  ",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Plus,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "modglobal_a",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "LABEL",
        ),
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span { .. },
    },
    Token {
        token_type: OpenParen,
        span: Span { .. },
    },
    Token {
        token_type: Str(
            "b.LABEL:  ",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Plus,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "modglobal_b",
        ),
        span: Span { .. },
    },
    Token {
        token_type: Dot,
        span: Span { .. },
    },
    Token {
        token_type: Id(
            "LABEL",
        ),
        span: Span { .. },
    },
    Token {
        token_type: CloseParen,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: Return,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
    Token {
        token_type: CloseBrace,
        span: Span { .. },
    },
    Token {
        token_type: NewLine,
        span: Span { .. },
    },
]
