mux-compiler/tests/snapshots/lexer_integration__file_lexer__test_module_nonmain_imports.snap
---
source: mux-compiler/tests/lexer_integration.rs
expression: tokens
---
[
    Token {
        token_type: LineComment(
            "A non-main module must see the constants it imported directly into its own",
        ),
        span: Span {
            row_start: 1,
            row_end: Some(
                1,
            ),
            col_start: 1,
            col_end: Some(
                78,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 1,
            row_end: None,
            col_start: 78,
            col_end: None,
        },
    },
    Token {
        token_type: LineComment(
            "scope. Its globals live in its own table, so the import aliases have to be",
        ),
        span: Span {
            row_start: 2,
            row_end: Some(
                2,
            ),
            col_start: 1,
            col_end: Some(
                78,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 2,
            row_end: None,
            col_start: 78,
            col_end: None,
        },
    },
    Token {
        token_type: LineComment(
            "added there too, not only to the main module's view.",
        ),
        span: Span {
            row_start: 3,
            row_end: Some(
                3,
            ),
            col_start: 1,
            col_end: Some(
                56,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 3,
            row_end: None,
            col_start: 56,
            col_end: None,
        },
    },
    Token {
        token_type: Import,
        span: Span {
            row_start: 4,
            row_end: Some(
                4,
            ),
            col_start: 1,
            col_end: Some(
                7,
            ),
        },
    },
    Token {
        token_type: Id(
            "modglobal_e",
        ),
        span: Span {
            row_start: 4,
            row_end: Some(
                4,
            ),
            col_start: 8,
            col_end: Some(
                19,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 4,
            row_end: None,
            col_start: 19,
            col_end: None,
        },
    },
    Token {
        token_type: Import,
        span: Span {
            row_start: 5,
            row_end: Some(
                5,
            ),
            col_start: 1,
            col_end: Some(
                7,
            ),
        },
    },
    Token {
        token_type: Id(
            "modglobal_a",
        ),
        span: Span {
            row_start: 5,
            row_end: Some(
                5,
            ),
            col_start: 8,
            col_end: Some(
                19,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 5,
            row_end: None,
            col_start: 19,
            col_end: None,
        },
    },
    Token {
        token_type: Import,
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 1,
            col_end: Some(
                7,
            ),
        },
    },
    Token {
        token_type: Id(
            "modglobal_b",
        ),
        span: Span {
            row_start: 6,
            row_end: Some(
                6,
            ),
            col_start: 8,
            col_end: Some(
                19,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 6,
            row_end: None,
            col_start: 19,
            col_end: None,
        },
    },
    Token {
        token_type: Import,
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 1,
            col_end: Some(
                7,
            ),
        },
    },
    Token {
        token_type: Id(
            "modglobal_c",
        ),
        span: Span {
            row_start: 7,
            row_end: Some(
                7,
            ),
            col_start: 8,
            col_end: Some(
                19,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 7,
            row_end: None,
            col_start: 19,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 8,
            row_end: None,
            col_start: 1,
            col_end: None,
        },
    },
    Token {
        token_type: Func,
        span: Span {
            row_start: 9,
            row_end: Some(
                9,
            ),
            col_start: 1,
            col_end: Some(
                5,
            ),
        },
    },
    Token {
        token_type: Id(
            "main",
        ),
        span: Span {
            row_start: 9,
            row_end: Some(
                9,
            ),
            col_start: 6,
            col_end: Some(
                10,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 9,
            row_end: None,
            col_start: 10,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 9,
            row_end: None,
            col_start: 11,
            col_end: None,
        },
    },
    Token {
        token_type: Returns,
        span: Span {
            row_start: 9,
            row_end: Some(
                9,
            ),
            col_start: 13,
            col_end: Some(
                20,
            ),
        },
    },
    Token {
        token_type: Id(
            "void",
        ),
        span: Span {
            row_start: 9,
            row_end: Some(
                9,
            ),
            col_start: 21,
            col_end: Some(
                25,
            ),
        },
    },
    Token {
        token_type: OpenBrace,
        span: Span {
            row_start: 9,
            row_end: None,
            col_start: 26,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 9,
            row_end: None,
            col_start: 27,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span {
            row_start: 10,
            row_end: Some(
                10,
            ),
            col_start: 5,
            col_end: Some(
                10,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 10,
            col_end: None,
        },
    },
    Token {
        token_type: Str(
            "wildcard  (want 10):      ",
        ),
        span: Span {
            row_start: 10,
            row_end: Some(
                10,
            ),
            col_start: 11,
            col_end: Some(
                39,
            ),
        },
    },
    Token {
        token_type: Plus,
        span: Span {
            row_start: 10,
            row_end: Some(
                10,
            ),
            col_start: 40,
            col_end: Some(
                41,
            ),
        },
    },
    Token {
        token_type: Id(
            "modglobal_e",
        ),
        span: Span {
            row_start: 10,
            row_end: Some(
                10,
            ),
            col_start: 42,
            col_end: Some(
                53,
            ),
        },
    },
    Token {
        token_type: Dot,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 53,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "threshold_plus",
        ),
        span: Span {
            row_start: 10,
            row_end: Some(
                10,
            ),
            col_start: 54,
            col_end: Some(
                68,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 68,
            col_end: None,
        },
    },
    Token {
        token_type: Int(
            3,
        ),
        span: Span {
            row_start: 10,
            row_end: Some(
                10,
            ),
            col_start: 69,
            col_end: Some(
                70,
            ),
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 70,
            col_end: None,
        },
    },
    Token {
        token_type: Dot,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 71,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span {
            row_start: 10,
            row_end: Some(
                10,
            ),
            col_start: 72,
            col_end: Some(
                81,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 81,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 82,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 83,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 10,
            row_end: None,
            col_start: 84,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span {
            row_start: 11,
            row_end: Some(
                11,
            ),
            col_start: 5,
            col_end: Some(
                10,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 11,
            row_end: None,
            col_start: 10,
            col_end: None,
        },
    },
    Token {
        token_type: Str(
            "selective (want alpha):   ",
        ),
        span: Span {
            row_start: 11,
            row_end: Some(
                11,
            ),
            col_start: 11,
            col_end: Some(
                39,
            ),
        },
    },
    Token {
        token_type: Plus,
        span: Span {
            row_start: 11,
            row_end: Some(
                11,
            ),
            col_start: 40,
            col_end: Some(
                41,
            ),
        },
    },
    Token {
        token_type: Id(
            "modglobal_e",
        ),
        span: Span {
            row_start: 11,
            row_end: Some(
                11,
            ),
            col_start: 42,
            col_end: Some(
                53,
            ),
        },
    },
    Token {
        token_type: Dot,
        span: Span {
            row_start: 11,
            row_end: None,
            col_start: 53,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "banner",
        ),
        span: Span {
            row_start: 11,
            row_end: Some(
                11,
            ),
            col_start: 54,
            col_end: Some(
                60,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 11,
            row_end: None,
            col_start: 60,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 11,
            row_end: None,
            col_start: 61,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 11,
            row_end: None,
            col_start: 62,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 11,
            row_end: None,
            col_start: 63,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "print",
        ),
        span: Span {
            row_start: 12,
            row_end: Some(
                12,
            ),
            col_start: 5,
            col_end: Some(
                10,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 12,
            row_end: None,
            col_start: 10,
            col_end: None,
        },
    },
    Token {
        token_type: Str(
            "renamed   (want 55):      ",
        ),
        span: Span {
            row_start: 12,
            row_end: Some(
                12,
            ),
            col_start: 11,
            col_end: Some(
                39,
            ),
        },
    },
    Token {
        token_type: Plus,
        span: Span {
            row_start: 12,
            row_end: Some(
                12,
            ),
            col_start: 40,
            col_end: Some(
                41,
            ),
        },
    },
    Token {
        token_type: Id(
            "modglobal_e",
        ),
        span: Span {
            row_start: 12,
            row_end: Some(
                12,
            ),
            col_start: 42,
            col_end: Some(
                53,
            ),
        },
    },
    Token {
        token_type: Dot,
        span: Span {
            row_start: 12,
            row_end: None,
            col_start: 53,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "capped",
        ),
        span: Span {
            row_start: 12,
            row_end: Some(
                12,
            ),
            col_start: 54,
            col_end: Some(
                60,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 12,
            row_end: None,
            col_start: 60,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 12,
            row_end: None,
            col_start: 61,
            col_end: None,
        },
    },
    Token {
        token_type: Dot,
        span: Span {
            row_start: 12,
            row_end: None,
            col_start: 62,
            col_end: None,
        },
    },
    Token {
        token_type: Id(
            "to_string",
        ),
        span: Span {
            row_start: 12,
            row_end: Some(
                12,
            ),
            col_start: 63,
            col_end: Some(
                72,
            ),
        },
    },
    Token {
        token_type: OpenParen,
        span: Span {
            row_start: 12,
            row_end: None,
            col_start: 72,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 12,
            row_end: None,
            col_start: 73,
            col_end: None,
        },
    },
    Token {
        token_type: CloseParen,
        span: Span {
            row_start: 12,
            row_end: None,
            col_start: 74,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 12,
            row_end: None,
            col_start: 75,
            col_end: None,
        },
    },
    Token {
        token_type: Return,
        span: Span {
            row_start: 13,
            row_end: Some(
                13,
            ),
            col_start: 5,
            col_end: Some(
                11,
            ),
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 13,
            row_end: None,
            col_start: 11,
            col_end: None,
        },
    },
    Token {
        token_type: CloseBrace,
        span: Span {
            row_start: 14,
            row_end: None,
            col_start: 1,
            col_end: None,
        },
    },
    Token {
        token_type: NewLine,
        span: Span {
            row_start: 14,
            row_end: None,
            col_start: 2,
            col_end: None,
        },
    },
]
